--- a/themes/wikitten/layout/common/head.ejs
+++ b/themes/wikitten/layout/common/head.ejs
@@ -51,7 +51,7 @@
     <% } %>
 
     <% if (theme.customize.favicon) { %>
-        <link rel="icon" href="<%- url_for(theme.customize.favicon) %>" />
+        <link rel="icon" href="<%= url_for(theme.customize.favicon) %>" />
     <% } %>
 
     <%- css('libs/font-awesome/css/font-awesome.min') %>
