--- a/themes/wikitten/layout/common/header.ejs
+++ b/themes/wikitten/layout/common/header.ejs
@@ -2,7 +2,9 @@
     <div id="header-main" class="header-inner">
         <div class="outer">
             <a href="<%- url_for() %>" id="logo">
-                <%- (theme.customize.logo && theme.customize.logo.enabled ? '<i class="logo"></i>':'') %>
+            <% if(theme.customize.logo && theme.customize.logo.enabled) { %>
+            <img class="logomy" src="<%= url_for(theme.customize.logo.url) %>" />
+            <% } %>
                 <span class="site-title"><%= config.title %></span>
             </a>
             <nav id="main-nav">
