--- a/themes/wikitten/source/css/style.styl
+++ b/themes/wikitten/source/css/style.styl
@@ -59,6 +59,11 @@ code
     background-repeat: no-repeat
     background-image: url(logo-url)
     background-size: logo-width logo-height
+.logomy
+    width: logo-width
+    height: logo-height
+    background-repeat: no-repeat
+    background-size: logo-width logo-height
 
 #container
     position: relative
