--- a/themes/wikitten/layout/common/profile.ejs
+++ b/themes/wikitten/layout/common/profile.ejs
@@ -7,17 +7,20 @@
             <h2 id="name"><%= profile.author %></h2>
             <h3 id="title"><%= profile.author_title %></h3>
             <span id="location"><i class="fa fa-map-marker"></i><%= profile.location %></span>
-            <a id="follow" target="_blank" href="<%= profile.follow %>"><%= __('profile.follow') %></a>
         </div>
         <div class="article-info profile-block">
+            <a href=" <%- url_for("/archives") %> ">
             <div class="article-info-block">
                 <%= site.posts.length %>
                 <span><%= (site.posts.length > 1 ? __('profile.posts') : __('profile.post')) %></span>
             </div>
+            </a>
+            <a href=" <%- url_for("/tags") %> ">
             <div class="article-info-block">
                 <%= tagCount %>
                 <span><%= (tagCount > 1 ? __('profile.tags') : __('profile.tag')) %></span>
             </div>
+            </a>
         </div>
         <% if(theme.customize.social_links) { %>
         <div class="profile-block social-links">
@@ -26,7 +29,7 @@
                     <% var tooltipClass = theme.customize.social_link_tooltip === false ? '' : 'class=tooltip'; %>
                     <% for(var i in theme.customize.social_links) { %>
                     <td>
-                        <a href="<%- url_for(theme.customize.social_links[i]) %>" target="_blank" title="<%= i %>" <%= tooltipClass %>>
+                        <a href="<%- url_for(theme.customize.social_links[i]) %>" target="_blank" title="<%= theme.customize.social_links_titles[i] %>" <%= tooltipClass %>>
                             <i class="fa fa-<%= i %>"></i>
                         </a>
                     </td>
