--- a/themes/wikitten/source/css/style.styl
+++ b/themes/wikitten/source/css/style.styl
@@ -99,3 +99,77 @@ code
 if sidebar is left
     #profile
         float: right
+
+
+// note
+.note
+  padding 0.75rem
+  border-left 0.35rem solid
+  border-radius 0.25rem
+  margin 1.5rem 0
+  color var(--text-color)
+  transition color .2s ease-in-out
+  font-size 0.9rem
+
+  a
+    color var(--text-color)
+    transition color .2s ease-in-out
+
+  *:last-child
+    margin-bottom 0
+
+.note-primary
+  background-color rgba(#b7a0e0, 0.25)
+  border-color #6f42c1
+
+.note-secondary, note-default
+  background-color rgba(#bbbbbb, 0.25)
+  border-color #777
+
+.note-success
+  background-color rgba(#aedcae, 0.25)
+  border-color #5cb85c
+
+.note-danger
+  background-color rgba(#eca9a7, 0.25)
+  border-color #d9534f
+
+.note-warning
+  background-color rgba(#f8d6a6, 0.25)
+  border-color #f0ad4e
+
+.note-info
+  background-color rgba(#a0c5e4, 0.25)
+  border-color #428bca
+
+.note-light
+  background-color rgba(#fefefe, 0.25)
+  border-color #0f0f0f
+
+// label
+.label
+  display inline
+  border-radius 3px
+  font-size 85%
+  margin 0
+  padding .2em .4em
+  color var(--text-color)
+  transition color .2s ease-in-out
+
+.label-default
+  background rgba(#bbbbbb, 0.25)
+
+.label-primary
+  background rgba(#b7a0e0, 0.25)
+
+.label-info
+  background rgba(#a0c5e4, 0.25)
+
+.label-success
+  background rgba(#aedcae, 0.25)
+
+.label-warning
+  background rgba(#f8d6a6, 0.25)
+
+.label-danger
+  background rgba(#eca9a7, 0.25)
