--- a/themes/wikitten/source/css/style.styl
+++ b/themes/wikitten/source/css/style.styl
@@ -173,3 +173,29 @@ if sidebar is left
 
 .label-danger
   background rgba(#eca9a7, 0.25)
+
+article-entry { counter-reset: h2counter; }
+
+.article-entry h2 {
+	counter-increment: counter_h2;
+	counter-reset: counter_h3;
+}
+.article-entry h2:before {
+	content: counter(counter_h2)"　";
+}
+
+.article-entry h3 {
+	counter-increment: counter_h3;
+	counter-reset: counter_h4;
+}
+.article-entry h3:before {
+	content: counter(counter_h2)"."counter(counter_h3)"　";
+}
+
+.article-entry h4 {
+	counter-increment: counter_h4;
+	counter-reset: counter_h5;
+}
+.article-entry h4:before {
+	content: counter(counter_h2)"."counter(counter_h3)"."counter(counter_h4)"　";
+}
