--- a/themes/wikitten/layout/common/scripts.ejs
+++ b/themes/wikitten/layout/common/scripts.ejs
@@ -3,3 +3,11 @@
 
 <!-- Custom Scripts -->
 <%- js('js/main') %>
+{% if (theme.mermaid.enable)  %}
+  <script src='https://unpkg.com/mermaid@{{ theme.mermaid.version }}/dist/mermaid.min.js'></script>
+  <script>
+    if (window.mermaid) {
+      mermaid.initialize({theme: 'forest'});
+    }
+  </script>
+{% endif %}
