--- a/themes/wikitten/layout/common/scripts.ejs
+++ b/themes/wikitten/layout/common/scripts.ejs
@@ -1,13 +1,12 @@
-<%- partial('comment/scripts', { page: page }) %>
-<%- partial('plugin/scripts') %>
-
-<!-- Custom Scripts -->
-<%- js('js/main') %>
-{% if (theme.mermaid.enable)  %}
-  <script src='https://unpkg.com/mermaid@{{ theme.mermaid.version }}/dist/mermaid.min.js'></script>
+<% if (theme.mermaid.enable) { %>
+  <script src='https://unpkg.com/mermaid@<%= theme.mermaid.version %>/dist/mermaid.js'></script>
   <script>
     if (window.mermaid) {
       mermaid.initialize({theme: 'forest'});
     }
   </script>
-{% endif %}
+<% } %>
+<%- partial('comment/scripts', { page: page }) %>
+<%- partial('plugin/scripts') %>
+
+<!-- Custom Scripts -->
